Fri Aug 15 12:14:58 2003  George Lebl <jirka@5z.com>

	* daemon/cookie.[ch], daemon/slave.c, daemon/xdmcp.c, daemon/gdm.c:
	  Add some semi randomness spinners which are spun on somewhat random
	  occasions.  This should add to our entropy a bit especially on
	  systems without /dev/random (20 bytes of semi randomness is added
	  this way).  And try /dev/srandom on openbsd.

	* daemon/cookie.c: don't read the buffer max from /dev/random, but
	  only the required size, the (there's no need to md5 512 bytes of
	  truly random data just to get 16 bytes).  Require 32 bytes from
	  /dev/random (this is what openssl does apparently), also from
	  openssl, /dev/random still sometimes blocks, so set up a select
	  loop for it that waits 10ms at most.  Also try /dev/mem as one of
	  the files in case we can't get enough entropy from /dev/random.

	* daemon/slave.c: some G_UNLIKELY/G_LIKELY code from yesterday
	  that was still uncommitted

	* daemon/auth.c: set egid as well as euid when testing for root
	  squashing

	* gui/gdmXnestchooser.c: add some IGNORE_EINTR

	* gui/gdmchooser.c: make sure the ARRAY8's are initialized
	  to zero so that we don't possibly crash on bad return packet.

Fri Aug 15  Brian Cameron <Brian.Cameron@Sun.COM>

	* daemon/misc.h: Provide a #define for __PRETTY_FUNCTION__
	  for systems where it is not available.

Fri Aug 15 01:59:53 2003  George Lebl <jirka@5z.com>

	* daemon/auth.c: fix possible crash on on purge and redo the
	  purge reopening to be more anal

	* daemon/slave.c: fix some possible fd leaks

	* daemon/gdm.c, daemon/misc.[ch], daemon/slave.c,
	  daemon/xdmcp.c: Implement our own asserts that do
	  gdm_fail

	* daemon/auth.c, daemon/gdm.c, daemon/misc.c, daemon/slave.c,
	  daemon/xdmcp.c, gui/greeter/greeter_events.c,
	  gui/greeter/greeter_parser.c:  Go crazy with G_LIKELY
	  and G_UNLIKELY.  It's 1:50am, I can't sleep and am bored.
	  Might as well do some soptimizations.

Thu Aug 14 17:50:30 2003  George Lebl <jirka@5z.com>
