@@ -8,7 +8,7 @@ dnl
 AC_PROG_INTLTOOL([0.21])
 
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(gdm,2.4.2.100)
+AM_INIT_AUTOMAKE(gdm,2.4.2.101)
 AM_MAINTAINER_MODE
 
 GTK_REQUIRED=1.3.1
